--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Kinnara common library</description>
+    <url>https://github.com/kinnara-digital-studio/kinnara-commons/wiki</url>
     <groupId>com.kinnarastudio</groupId>
-    <artifactId>kinnara-declutter</artifactId>
+    <artifactId>kinnara-commons-declutter</artifactId>
     <version>1.0.0</version>
     <dependencies>
         <dependency>
@@ -25,4 +28,25 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Aristo Hadisoeganda</name>
+            <email>aristo.hadisoeganda@kinnarastudio.com</email>
+            <organization>Kinnara Digital Studio</organization>
+            <organizationUrl>https://www.kinnarastudio.com</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com:kinnara-digital-studio/kinnara-commons.git</connection>
+        <developerConnection>scm:git:ssh://github.com:kinnara-digital-studio/kinnara-commons.git</developerConnection>
+        <url>https://github.com:kinnara-digital-studio/kinnara-commons/tree/master</url>
+    </scm>
 </project>
