--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <url>https://github.com/kinnara-digital-studio/kinnara-commons-declutter/wiki</url>
     <groupId>com.kinnarastudio</groupId>
     <artifactId>kinnara-commons-declutter</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.1</version>
 
     <build>
         <plugins>
@@ -63,7 +63,8 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20180813</version>
+            <version>20160810</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
