--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20080701</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
@@ -86,6 +87,7 @@
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
             <version>1.4.1</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
