--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <url>https://github.com/kinnara-digital-studio/kinnara-commons/wiki</url>
     <groupId>com.kinnarastudio</groupId>
     <artifactId>kinnara-commons</artifactId>
-    <version>2.2.2</version>
+    <version>3.0.0</version>
 
     <build>
         <plugins>
@@ -83,12 +83,12 @@
             <version>3.4</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.codehaus.jettison/jettison -->
-        <dependency>
-            <groupId>org.codehaus.jettison</groupId>
-            <artifactId>jettison</artifactId>
-            <version>1.4.1</version>
-            <scope>provided</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.codehaus.jettison</groupId>-->
+<!--            <artifactId>jettison</artifactId>-->
+<!--            <version>1.4.1</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
 
     </dependencies>
 
